fixed flickering on hover on nav-right btn

--- a/src/App.scss
+++ b/src/App.scss
@@ -3667,7 +3667,7 @@ body.scroll-disabled {
     .navbar-right {
       order: 2;
       &:hover {
-        margin-left: 1rem;
+        width: 3rem;
       }
     }
 
